--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             <button class="install-btn" id="fearPhysicalBtn" onclick="runProcess('fearPhysical')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="fearPhysicalComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הפחד מקרבה פיזית הוסר!</p>
-                <p style="color: #666;">את/ה יכול/ה לקבל מגע בביטחון.</p>
+                <p style="color: #666;">והוחלף בנוחות ובטחון במגע אוהב.</p>
             </div>
         </div>
     </div>
@@ -423,7 +423,7 @@
             <button class="install-btn" id="fearEmotionalBtn" onclick="runProcess('fearEmotional')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="fearEmotionalComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הפחד מפגיעות רגשית הוסר!</p>
-                <p style="color: #666;">את/ה יכול/ה להיפתח בביטחון.</p>
+                <p style="color: #666;">והוחלף בפתיחות ובטחון בחשיפה.</p>
             </div>
         </div>
     </div>
@@ -440,7 +440,7 @@
             <button class="install-btn" id="fearSeenBtn" onclick="runProcess('fearSeen')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="fearSeenComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הפחד להיראות הוסר!</p>
-                <p style="color: #666;">את/ה יכול/ה להיות מוכר/ת ואהוב/ה.</p>
+                <p style="color: #666;">והוחלף בביטחון להיות מוכר/ת ואהוב/ה.</p>
             </div>
         </div>
     </div>
@@ -457,7 +457,7 @@
             <button class="install-btn" id="fearRejectionBtn" onclick="runProcess('fearRejection')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="fearRejectionComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הפחד מדחייה הוסר!</p>
-                <p style="color: #666;">את/ה ראוי/ה לאהבה ולקבלה.</p>
+                <p style="color: #666;">והוחלף בידיעה עמוקה שאת/ה ראוי/ה לאהבה.</p>
             </div>
         </div>
     </div>
@@ -474,7 +474,7 @@
             <button class="install-btn" id="bodyShameBtn" onclick="runProcess('bodyShame')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="bodyShameComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הבושה מהגוף הוסרה!</p>
-                <p style="color: #666;">את/ה יפה ומושלם/ת כמו שאת/ה.</p>
+                <p style="color: #666;">והוחלף בקבלה עצמית ואהבת הגוף.</p>
             </div>
         </div>
     </div>
@@ -491,7 +491,7 @@
             <button class="install-btn" id="trustIssuesBtn" onclick="runProcess('trustIssues')">🗑️ התחל/י ריפוי</button>
             <div class="completion-message" id="trustIssuesComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ קשיי האמון נרפאו!</p>
-                <p style="color: #666;">את/ה יכול/ה לבטוח באדם הנכון.</p>
+                <p style="color: #666;">והוחלף באמון ובטחון בבחירות שלך.</p>
             </div>
         </div>
     </div>
@@ -508,7 +508,7 @@
             <button class="install-btn" id="pastTraumaBtn" onclick="runProcess('pastTrauma')">🗑️ התחל/י ריפוי</button>
             <div class="completion-message" id="pastTraumaComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הטראומות נרפאו!</p>
-                <p style="color: #666;">העבר כבר לא שולט בך.</p>
+                <p style="color: #666;">והוחלף בחופש וריפוי עמוק.</p>
             </div>
         </div>
     </div>
@@ -525,7 +525,7 @@
             <button class="install-btn" id="controlFearBtn" onclick="runProcess('controlFear')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="controlFearComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הפחד מאיבוד שליטה הוסר!</p>
-                <p style="color: #666;">את/ה יכול/ה להרפות ולזרום.</p>
+                <p style="color: #666;">והוחלף בזרימה ושחרור.</p>
             </div>
         </div>
     </div>
@@ -542,7 +542,7 @@
             <button class="install-btn" id="fearDeepConnectionBtn" onclick="runProcess('fearDeepConnection')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="fearDeepConnectionComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הפחד מחיבור עמוק הוסר!</p>
-                <p style="color: #666;">את/ה יכול/ה להתחבר לעומק.</p>
+                <p style="color: #666;">והוחלף בחיבור עמוק ובטוח.</p>
             </div>
         </div>
     </div>
@@ -559,7 +559,7 @@
             <button class="install-btn" id="fearSharingBtn" onclick="runProcess('fearSharing')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="fearSharingComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הפחד לשתף הוסר!</p>
-                <p style="color: #666;">את/ה יכול/ה לשתף את הרגשות שלך.</p>
+                <p style="color: #666;">והוחלף בחופש לשתף ולהביע רגשות.</p>
             </div>
         </div>
     </div>
@@ -576,7 +576,7 @@
             <button class="install-btn" id="fearDependencyBtn" onclick="runProcess('fearDependency')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="fearDependencyComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הפחד מתלות הוסר!</p>
-                <p style="color: #666;">תלות בריאה היא חלק מאהבה.</p>
+                <p style="color: #666;">והוחלף ביכולת לתלות בריאה ובטוחה.</p>
             </div>
         </div>
     </div>
@@ -593,7 +593,7 @@
             <button class="install-btn" id="fearAbandonmentBtn" onclick="runProcess('fearAbandonment')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="fearAbandonmentComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הפחד מנטישה הוסר!</p>
-                <p style="color: #666;">את/ה שלם/ה גם בתוך הזוגיות.</p>
+                <p style="color: #666;">והוחלף בשלמות עצמית והתקשרות בטוחה.</p>
             </div>
         </div>
     </div>
@@ -610,7 +610,7 @@
             <button class="install-btn" id="emotionalWallsBtn" onclick="runProcess('emotionalWalls')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="emotionalWallsComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ החומות הרגשיות הוסרו!</p>
-                <p style="color: #666;">הלב שלך פתוח לקבל ולתת אהבה.</p>
+                <p style="color: #666;">והוחלפו בלב פתוח וגבולות בריאים.</p>
             </div>
         </div>
     </div>
@@ -627,7 +627,7 @@
             <button class="install-btn" id="fearLoveBtn" onclick="runProcess('fearLove')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="fearLoveComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הפחד מאהבה הוסר!</p>
-                <p style="color: #666;">את/ה מוכן/ה לאהוב ולהיות אהוב/ה.</p>
+                <p style="color: #666;">והוחלף בפתיחות לאהבה אמיתית.</p>
             </div>
         </div>
     </div>
@@ -644,7 +644,7 @@
             <button class="install-btn" id="fearFinancialBtn" onclick="runProcess('fearFinancial')">🗑️ התחל/י הסרה</button>
             <div class="completion-message" id="fearFinancialComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הפחד משיתוף כלכלי הוסר!</p>
-                <p style="color: #666;">את/ה יכול/ה לשתף כלכלית בביטחון.</p>
+                <p style="color: #666;">והוחלף בביטחון ושיתוף בריא.</p>
             </div>
         </div>
     </div>
@@ -661,7 +661,7 @@
             <button class="install-btn" id="safeIntimacyBtn" onclick="runProcess('safeIntimacy')">✨ התחל/י התקנה</button>
             <div class="completion-message" id="safeIntimacyComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ תחושת הביטחון הותקנה!</p>
-                <p style="color: #666;">את/ה מרגיש/ה בטוח/ה בקרבה.</p>
+                <p style="color: #666;">והוחלף בביטחון ונוחות בקרבה.</p>
             </div>
         </div>
     </div>
@@ -678,7 +678,7 @@
             <button class="install-btn" id="enjoyTouchBtn" onclick="runProcess('enjoyTouch')">✨ התחל/י התקנה</button>
             <div class="completion-message" id="enjoyTouchComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ היכולת ליהנות ממגע הותקנה!</p>
-                <p style="color: #666;">את/ה יכול/ה ליהנות מקרבה פיזית.</p>
+                <p style="color: #666;">והוחלף בהנאה חופשית מקרבה פיזית.</p>
             </div>
         </div>
     </div>
@@ -695,7 +695,7 @@
             <button class="install-btn" id="expressDesireBtn" onclick="runProcess('expressDesire')">✨ התחל/י התקנה</button>
             <div class="completion-message" id="expressDesireComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ היכולת לבטא רצונות הותקנה!</p>
-                <p style="color: #666;">את/ה יכול/ה לתקשר בפתיחות.</p>
+                <p style="color: #666;">והוחלף בתקשורת פתוחה וזורמת.</p>
             </div>
         </div>
     </div>
@@ -712,7 +712,7 @@
             <button class="install-btn" id="bePresentBtn" onclick="runProcess('bePresent')">✨ התחל/י התקנה</button>
             <div class="completion-message" id="bePresentComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הנוכחות ברגע הותקנה!</p>
-                <p style="color: #666;">את/ה נוכח/ת ומחובר/ת.</p>
+                <p style="color: #666;">והוחלף בנוכחות מלאה ומחוברת.</p>
             </div>
         </div>
     </div>
@@ -729,7 +729,7 @@
             <button class="install-btn" id="abilityToLoveBtn" onclick="runProcess('abilityToLove')">✨ התחל/י התקנה</button>
             <div class="completion-message" id="abilityToLoveComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ היכולת לאהוב הותקנה!</p>
-                <p style="color: #666;">את/ה יכול/ה לתת אהבה בחופשיות.</p>
+                <p style="color: #666;">לב פתוח ואהבה זורמת בחופשיות.</p>
             </div>
         </div>
     </div>
@@ -746,7 +746,7 @@
             <button class="install-btn" id="receiveLoveBtn" onclick="runProcess('receiveLove')">✨ התחל/י התקנה</button>
             <div class="completion-message" id="receiveLoveComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ היכולת לקבל אהבה הותקנה!</p>
-                <p style="color: #666;">את/ה יכול/ה לקבל אהבה בלי פחד.</p>
+                <p style="color: #666;">לב פתוח לקבל אהבה בשמחה.</p>
             </div>
         </div>
     </div>
@@ -763,7 +763,7 @@
             <button class="install-btn" id="vulnerabilityBtn" onclick="runProcess('vulnerability')">✨ התחל/י התקנה</button>
             <div class="completion-message" id="vulnerabilityComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ היכולת להיות פגיע/ה הותקנה!</p>
-                <p style="color: #666;">פגיעות היא הכוח האמיתי שלך.</p>
+                <p style="color: #666;">פגיעות בריאה כמקור לחיבור עמוק.</p>
             </div>
         </div>
     </div>
@@ -780,7 +780,7 @@
             <button class="install-btn" id="emotionalSafetyBtn" onclick="runProcess('emotionalSafety')">✨ התחל/י התקנה</button>
             <div class="completion-message" id="emotionalSafetyComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הביטחון הרגשי הותקן!</p>
-                <p style="color: #666;">את/ה מרגיש/ה בטוח/ה רגשית.</p>
+                <p style="color: #666;">ביטחון רגשי יציב ועמוק.</p>
             </div>
         </div>
     </div>
@@ -797,7 +797,7 @@
             <button class="install-btn" id="fullHealingBtn" onclick="runProcess('fullHealing')">💕 התחל/י ריפוי מלא</button>
             <div class="completion-message" id="fullHealingComplete">
                 <p style="font-size: 1.3em; margin-bottom: 10px; color: #D4A574;">✅ הריפוי המלא הושלם!</p>
-                <p style="color: #666;">את/ה מוכן/ה לאינטימיות בריאה, בטוחה ומהנה.</p>
+                <p style="color: #666;">והוחלף ביכולת לאינטימיות בריאה, בטוחה ומהנה.</p>
             </div>
         </div>
     </div>
